[gd_scene load_steps=4 format=2]

[ext_resource path="res://Entities/NPCs/CommodityController.gd" type="Script" id=1]
[ext_resource path="res://Entities/NPCs/CommodityDetectionZone.tscn" type="PackedScene" id=2]
[ext_resource path="res://Entities/NPCs/CommodityExtractionZone.tscn" type="PackedScene" id=4]

[node name="CommodityController" type="Spatial"]
script = ExtResource( 1 )

[node name="CommodityDetectionZone" parent="." instance=ExtResource( 2 )]

[node name="CommodityExtractionZone" parent="." instance=ExtResource( 4 )]

[node name="ConsumeTimer" type="Timer" parent="."]
autostart = true

[node name="ExtractTimer" type="Timer" parent="."]
wait_time = 0.1

[connection signal="commodity_available" from="CommodityExtractionZone" to="." method="_on_CommodityExtractionZone_commodity_available"]
[connection signal="timeout" from="ConsumeTimer" to="." method="_on_ConsumeTimer_timeout"]
[connection signal="timeout" from="ExtractTimer" to="." method="_on_ExtractTimer_timeout"]
